# alexa_collaborative_conversation

./: CMakeLists.txt  README.md  package.xml  requirements.txt
AzureFunctions/: AuthFile  local.settings.json  requirements.txt
AzureFunctions/SkillBackend/: __init__.py  backend.py  function.json  intent_handlers.py  utils.py
AzureFunctions/SkillBackend/Handlers/: conversation_handlers.py  default_handlers.py  intent_handlers.py
AzureFunctions/SkillBackend/Utils/: command_list.py  ros.py  utils.py
doc/: Dialog.md  Example_Response.json  Useful Links.md  alexa_conversation_env.yml  alexa_env.yml
doc/NASA-TLX/Risultati/: Risultati.ods
doc/Skill Frontend/: skill.json
doc/Skill Frontend/conversations/: apis.json  audio_responses.json  dialogs.json  types.json  utterances.json
doc/Skill Frontend/interactionModels/custom/: en-US.json
doc/Skill Frontend/response/prompts/BeginExperiment/: document.json
doc/Skill Frontend/response/prompts/HelpSpecialBlock_Response/: document.json
doc/Skill Frontend/response/prompts/Wait/: document.json
launch/: bridge.launch  collaborative_tutorial.launch  node_red.launch  node_red.launch.py  skill_backend.launch  skill_backend.launch.py  test.launch
msg/: VoiceCommand.msg
script/: expManager.py  experiment.py
script/Skill/: AuthFile  NodeRED_CollaborativeTutorial_Flows.json  flows.json  skill_backend_launcher.py  utils.py
script/TTS/: flows.json  node_red.py
script/utils/: object_list.py
scripts/: experiment.py  launch.py  prova.py  test.py
scripts/Skill/: skill_backend_launcher.py
scripts/TTS/: flows.json
(+13 files in other folders)
