<?xml version="1.0"?>
<package format="2">

  <name>alexa_conversation</name>
  <version>0.0.0</version>
  <description>The alexa_conversation package</description>

  <author email="davide.ferrari95@unimore.it">Davide Ferrari</author>
  <maintainer email="davide.ferrari95@unimore.it">Davide Ferrari</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>

</package>
